# kz-asb1

./: README.md  time.txt
WX/: README.MD  anch.sh  dokack.sh  sout.sh
WX/s1/: balances.txt
WX/tzt/: README.MD
WX/tzt/a1/: Anchor.toml  anch.sh
WX/tzt/a1/pee/: balances.txt
WX/tzt/a1/programs/a1/: Cargo.toml
WX/tzt/a1/programs/a1/src/: lib.rs
WX/tzt/a1/tests/: a1.ts
WX/tzt/a2/: Anchor.toml  anch.sh
WX/tzt/a2/programs/a2/: Cargo.toml
WX/tzt/a2/programs/a2/src/: lib.rs
WX/tzt/a2/tests/: a2.ts
WX/tzt/a3/: Anchor.toml  README.MD  anch.sh
WX/tzt/a3/programs/a3/: Cargo.toml
WX/tzt/a3/programs/a3/src/: lib.rs
WX/tzt/a3/tests/: a3.ts
